variables for groups
